# effigy

./: .gitignore  README.md  pyproject.toml
src/effigy/: configuration.py  context.py  dbset.py  entity.py  qb.py
src/effigy/builder/: core.py  index.py  property.py  relationship.py
src/effigy/provider/: base.py  factory.py  memory.py  mysql.py  pg.py
tests/: conftest.py  test_async_context.py  test_builder.py  test_configuration.py  test_context.py  test_entity.py  test_integration.py  test_providers.py
